# Django-Assginment

./: .gitignore  README.md  pyproject.toml
.config_secret/: secret.json
config/: settings.py  urls.py
templates/: todo_list.html
templates/registration/: login.html  signup.html
templates/todo/: todo_info.html  todo_list.html
todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
